--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -17,7 +17,7 @@
     --md-sys-typescale-title-font: "OneUISans", sans-serif;
     --md-sys-typescale-label-font: "OneUISans", sans-serif;
     --md-sys-typescale-headline-font: "OneUISans", sans-serif;
-    --header-initial-height: 70px;
+    --header-initial-height: 60px;
     --header-scrolled-height: 65px;
 
     --background-color-dark: #1a1a1a;
@@ -130,6 +130,7 @@ body.dark footer {
     background: var(--header-bg-light);
     backdrop-filter: blur(15px);
     height: var(--header-initial-height);
+    border-bottom: 1px solid lightgray;
     display: flex;
     align-items: center;
 }
@@ -139,6 +140,7 @@ body.dark .main-header {
 }
 
 .main-header.scrolled {
+    border-bottom: none;
     padding: 8px 24px;
     backdrop-filter: blur(35px);
     height: var(--header-scrolled-height);
@@ -156,6 +158,7 @@ body.dark .main-header.translucent.scrolled {
     background-color: var(--solid-bg);
     backdrop-filter: none;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
+    border-bottom: none;
 }
 
 body.dark .main-header.no-translucency {
@@ -288,7 +291,7 @@ body.dark .content-header .content-subtitle {
     display: flex;
     flex-direction: column;
     width: 80%; 
-    gap: 20px;
+    gap: 10px;
     max-width: 1200px;
     margin: auto; 
     padding: 0 0 2rem 0; 
@@ -303,7 +306,7 @@ body.dark .content-header .content-subtitle {
     width: 100%;
     background-color: var(--card-container-background-color-light);
     border-radius: 20px;
-    gap: 20px;
+    gap: 10px;
     box-shadow: 0px 0px 0px rgba(255, 255, 255, 0.5);
     overflow: hidden;
     transition: var(--transition);
@@ -488,7 +491,7 @@ body.dark footer {
     .content-header {
         width: 95%;
         padding: 0 8px;
-        margin: 90px auto 5px; 
+        margin: 75px auto 10px; 
     }
 
     .cards-container {
